--- a/index.html
+++ b/index.html
@@ -2,19 +2,65 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>FundonSUI - Crowdfunding NFT on SUI blockchain!</title>
+    <meta
+      itemprop="name"
+      content="FundonSUI - Crowdfunding NFT on SUI blockchain!"
+    />
+    <meta
+      itemprop="description"
+      content="Crowdfunding on FundOnSui using smart contract technology to build a safe, fast and global crowdfunding service - with a new NFT model - dynamic on-chain assets."
+    />
+    <meta
+      name="description"
+      content="Crowdfunding on FundOnSui using smart contract technology to build a safe, fast and global crowdfunding service - with a new NFT model - dynamic on-chain assets."
+    />
+
+    <meta
+      itemprop="image"
+      content="https://home.fundonsui.finance/assets/preview-logo.png"
+    />
+    <meta property="og:url" content="https://home.fundonsui.finance/" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="FundonSUI - Crowdfunding NFT on SUI blockchain!"
+    />
+    <meta
+      property="og:description"
+      content="Crowdfunding on FundOnSui using smart contract technology to build a safe, fast and global crowdfunding service - with a new NFT model - dynamic on-chain assets."
+    />
+    <meta
+      property="og:image"
+      content="https://home.fundonsui.finance/assets/preview-logo.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="https://home.fundonsui.finance/" />
+    <meta property="twitter:url" content="https://home.fundonsui.finance/" />
+    <meta
+      name="twitter:title"
+      content="FundonSUI - Crowdfunding NFT on SUI blockchain!"
+    />
+    <meta
+      name="twitter:description"
+      content="Crowdfunding on FundOnSui using smart contract technology to build a safe, fast and global crowdfunding service - with a new NFT model - dynamic on-chain assets."
+    />
+    <meta
+      name="twitter:image"
+      content="https://home.fundonsui.finance/assets/preview-logo.png"
+    />
   </head>
   <body class="font-inter antialiased bg-white text-gray-900 tracking-tight">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script>
-        if (localStorage.getItem('sidebar-expanded') == 'true') {
-            document.querySelector('body').classList.add('sidebar-expanded');
-        } else {
-            document.querySelector('body').classList.remove('sidebar-expanded');
-        }
-    </script>   
+      if (localStorage.getItem("sidebar-expanded") == "true") {
+        document.querySelector("body").classList.add("sidebar-expanded");
+      } else {
+        document.querySelector("body").classList.remove("sidebar-expanded");
+      }
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
