--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
       name="description"
       content="Crowdfunding on FundOnSui using smart contract technology to build a safe, fast and global crowdfunding service - with a new NFT model - dynamic on-chain assets."
     />
-
     <meta
       itemprop="image"
-      content="https://home.fundonsui.finance/assets/preview-logo.png"
+      content="/src/images/preview.png"
     />
     <meta property="og:url" content="https://home.fundonsui.finance/" />
     <meta property="og:type" content="website" />
@@ -34,7 +33,7 @@
     />
     <meta
       property="og:image"
-      content="https://home.fundonsui.finance/assets/preview-logo.png"
+      content="/src/images/preview.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="https://home.fundonsui.finance/" />
@@ -49,7 +48,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://home.fundonsui.finance/assets/preview-logo.png"
+      content="/src/images/preview.png"
     />
   </head>
   <body class="font-inter antialiased bg-white text-gray-900 tracking-tight">
