fix: add new lanading

--- a/index.html
+++ b/index.html
@@ -4,47 +4,47 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FundonSUI - Crowdfunding NFT on SUI blockchain!</title>
+    <title>InkQuest - Growing Web3 user on the Ink! ecosystem</title>
     <meta
       itemprop="name"
-      content="FundonSUI - Crowdfunding NFT on SUI blockchain!"
+      content="InkQuest - Growing Web3 user on the Ink! ecosystem"
     />
     <meta
       itemprop="description"
-      content="Crowdfunding on FundOnSui using smart contract technology to build a safe, fast and global crowdfunding service - with a new NFT model - dynamic on-chain assets."
+      content="InkQuest is a decentralized platform base on the Ink! ecosystem for efficient task completion in Web3. Collaborate, align interests, and earn."
     />
     <meta
       name="description"
-      content="Crowdfunding on FundOnSui using smart contract technology to build a safe, fast and global crowdfunding service - with a new NFT model - dynamic on-chain assets."
+      content="InkQuest is a decentralized platform base on the Ink! ecosystem for efficient task completion in Web3. Collaborate, align interests, and earn."
     />
     <meta
       itemprop="image"
       content="/src/images/preview.png"
     />
-    <meta property="og:url" content="https://home.fundonsui.finance/" />
+    <meta property="og:url" content="https://home.InkQuest.finance/" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="FundonSUI - Crowdfunding NFT on SUI blockchain!"
+      content="InkQuest - Growing Web3 user on the Ink! ecosystem"
     />
     <meta
       property="og:description"
-      content="Crowdfunding on FundOnSui using smart contract technology to build a safe, fast and global crowdfunding service - with a new NFT model - dynamic on-chain assets."
+      content="InkQuest is a decentralized platform base on the Ink! ecosystem for efficient task completion in Web3. Collaborate, align interests, and earn."
     />
     <meta
       property="og:image"
       content="/src/images/preview.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="https://home.fundonsui.finance/" />
-    <meta property="twitter:url" content="https://home.fundonsui.finance/" />
+    <meta property="twitter:domain" content="https://home.InkQuest.finance/" />
+    <meta property="twitter:url" content="https://home.InkQuest.finance/" />
     <meta
       name="twitter:title"
-      content="FundonSUI - Crowdfunding NFT on SUI blockchain!"
+      content="InkQuest - Growing Web3 user on the Ink! ecosystem"
     />
     <meta
       name="twitter:description"
-      content="Crowdfunding on FundOnSui using smart contract technology to build a safe, fast and global crowdfunding service - with a new NFT model - dynamic on-chain assets."
+      content="InkQuest is a decentralized platform base on the Ink! ecosystem for efficient task completion in Web3. Collaborate, align interests, and earn."
     />
     <meta
       name="twitter:image"
